--- a/plugins/registration/po/hu/yast_webclient_registration.po
+++ b/plugins/registration/po/hu/yast_webclient_registration.po
@@ -1,67 +1,228 @@
-# translation of yast_webclient_registration.hu.po to Hungarian
-# Kalman Kemenczy <kkemenczy@novell.com>, 2009.
 # translation of yast_webclient_registration.hu.po to
+# Kalman Kemenczy <kkemenczy@novell.com>, 2009, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: yast_webclient_registration.hu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-11-12 12:07+0100\n"
-"PO-Revision-Date: 2009-10-29 13:54+0100\n"
+"POT-Creation-Date: 2010-05-03 16:31+0200\n"
+"PO-Revision-Date: 2010-05-05 14:59+0200\n"
 "Last-Translator: Kalman Kemenczy <kkemenczy@novell.com>\n"
-"Language-Team: Hungarian <hu@li.org>\n"
+"Language-Team: collection <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
+"Language: hu\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Lokalize 1.0\n"
 
-#: app/controllers/registration_controller.rb:14
-msgid "Invalid session, please login again."
-msgstr "Érvénytelen munkamenet, jelentkezzen be újra."
+#: app/controllers/registration_controller.rb:32
+msgid "Email"
+msgstr "E-mail"
+
+#: app/controllers/registration_controller.rb:33
+msgid "System name"
+msgstr "Rendszernév"
+
+#: app/controllers/registration_controller.rb:34
+msgid "SLES registration code"
+msgstr "SLES regisztrációs kód"
+
+#: app/controllers/registration_controller.rb:35
+msgid "SLED registration code"
+msgstr "SLED regisztrációs kód"
+
+#: app/controllers/registration_controller.rb:36
+msgid "Appliance registration code"
+msgstr "Készülék regisztrációs kód"
+
+#: app/controllers/registration_controller.rb:37
+msgid "WebYaST registration code"
+msgstr "WebYaST regisztrációs kód"
+
+#: app/controllers/registration_controller.rb:38
+msgid "Registration code"
+msgstr "Regisztrációs kód"
+
+#: app/controllers/registration_controller.rb:39
+msgid "Hostname"
+msgstr "Gépnév"
+
+#: app/controllers/registration_controller.rb:40
+msgid "Device name"
+msgstr "Eszköznév"
+
+#: app/controllers/registration_controller.rb:41
+msgid "Appliance name"
+msgstr "Készüléknév"
 
 #: app/controllers/registration_controller.rb:42
-#: app/controllers/registration_controller.rb:75
+msgid "registration code"
+msgstr "regisztrációs kód"
+
+#: app/controllers/registration_controller.rb:51
+msgid "Invalid session, please login again."
+msgstr "Érvénytelen munkamenet, lépjen be újra."
+
+#: app/controllers/registration_controller.rb:62
 msgid "No permissions for registration"
 msgstr "Nincs hozzáférése a regisztrációhoz"
 
-#: app/controllers/registration_controller.rb:57
-msgid "Arguments for registration cannot be evaluated."
-msgstr "A regisztrációhoz megadott argumentum nem értékelhető."
+#: app/controllers/registration_controller.rb:111
+msgid "Please try to register again later."
+msgstr "Próbálja meg a regisztrációt később."
 
-#: app/controllers/registration_controller.rb:97
-msgid "Registration finished successfully."
-msgstr "A regisztráció sikeresen befejeződött."
+#: app/controllers/registration_controller.rb:115
+msgid "Registration was skipped."
+msgstr "A regisztráció kihagyva."
 
-#: app/controllers/registration_controller.rb:123
+#: app/controllers/registration_controller.rb:121
+msgid "Registration did not finish."
+msgstr "A regisztráció nem fejeződött be."
+
+#: app/controllers/registration_controller.rb:122
+msgid "Registration did not succeed."
+msgstr "A regisztráció nem sikerült."
+
+#: app/controllers/registration_controller.rb:124
+msgid "This may be a temporary issue."
+msgstr "Ez valószínűleg csak átmeneti probléma."
+
+#: app/controllers/registration_controller.rb:129
+msgid "The registration server returned invalid or incomplete data."
+msgstr ""
+"A regisztrációs kiszolgáló érvénytelen vagy hiányos adatot küldött vissza."
+
+#: app/controllers/registration_controller.rb:137
+msgid "Could not read the registration configuration."
+msgstr "Nem olvasható a regisztrációs beállítás."
+
+#: app/controllers/registration_controller.rb:137
+msgid "The registration backend is not installed correctly"
+msgstr "A regisztrációs háttérrendszer nincs megfelelően telepítve"
+
+#: app/controllers/registration_controller.rb:138
+msgid "Please refer to your support contact."
+msgstr "Adja meg a támogatási kapcsolattartót."
+
+#: app/controllers/registration_controller.rb:167
 msgid "Please fill out missing entries."
 msgstr "Töltse ki a hiányzó adatokat."
 
-#: app/controllers/registration_controller.rb:126
-msgid "Error occured while connecting to registration server."
-msgstr "A regisztrációs kiszolgálóhoz való csatlakozás közben hiba történt."
+#: app/controllers/registration_controller.rb:198
+msgid "Service added:"
+msgstr "Hozzáadott szolgáltatás:"
 
-#: app/views/registration/index.rhtml:1
+#: app/controllers/registration_controller.rb:202
+#: app/controllers/registration_controller.rb:207
+msgid "Catalog enabled:"
+msgstr "Engedélyezett katalógus:"
+
+#: app/controllers/registration_controller.rb:232
+msgid "Repository added:"
+msgstr "Hozzáadott telepítése forrás:"
+
+#: app/controllers/registration_controller.rb:304
+msgid "This system is already registered."
+msgstr "A rendszer regisztrációja korábban megtörtént."
+
+#: app/controllers/registration_controller.rb:333
+msgid "Registration finished successfully."
+msgstr "A regisztráció sikeresen befejeződött."
+
+#: app/controllers/registration_controller.rb:343
+msgid ""
+"<p><b>Repositories were not modified during the registration process.</b></"
+"p><p>It is likely that an incorrect registration code was used. If this is "
+"the case, please attempt the registration process again to get an update "
+"repository.</p><p>Please make sure that this system has an update repository "
+"configured, otherwise it will not receive updates.</p>"
+msgstr ""
+"<p><b>A regisztrációs folyamat során a telepítési források nem kerültek "
+"módosításra.</b></p><p>Ez akkor történik, ha nem megfelelő regisztrációs kód "
+"került megadásra. Ebben az esetben indítsa újra a regisztráció folyamatát, "
+"hogy a telepítési források frissüljenek.</p><p>Bizonyosodjon meg arról, hogy "
+"a rendszerhez beállításra került egy frissítési telepítési forrás, mert "
+"ellenkező esetben nem kapja meg a frissítéseket.</p>"
+
+#: app/controllers/registration_controller.rb:377
+msgid "A connection to the registration server could not be established."
+msgstr "Nem sikerült kapcsolatot létesíteni a regisztrációs kiszolgálóval."
+
+#: app/controllers/registration_controller.rb:381
+msgid "The transmitted registration data created a conflict."
+msgstr "Az átküldött regisztrációs adatok ütközést okoztak a rendszerben."
+
+#: app/controllers/registration_controller.rb:389
+msgid ""
+"Registration can not be performed. There is no product installed that can be "
+"registered."
+msgstr ""
+"A regisztrációt nem lehet végrehajtani. Nincs olyan telepített termék, "
+"amelyhez regisztráció lenne szükséges."
+
+#: app/controllers/registration_controller.rb:404
+msgid ""
+"A connection to the registration server could not be established or it did "
+"not reply."
+msgstr ""
+"Nem sikerült kapcsolatot létesíteni a regisztrációs kiszolgálóval vagy nem "
+"válaszol."
+
+#: app/controllers/registration_controller.rb:421
+msgid "The registration server returned invalid data."
+msgstr "A regisztrációs kiszolgáló érvénytelen adatot küldött vissza."
+
+#: app/views/registration/index.rhtml:53 app/views/registration/index.rhtml:54
+msgid "Please enter a valid Email address."
+msgstr "Adjon meg egy érvényes e-mail címet."
+
+#: app/views/registration/index.rhtml:61
 msgid "register plugin"
 msgstr "regisztrációs bővítmény"
 
-#: app/views/registration/index.rhtml:2
+#: app/views/registration/index.rhtml:61
 msgid "Registration"
 msgstr "Regisztráció"
 
-#: app/views/registration/index.rhtml:7
-msgid "This table gives registration settings."
-msgstr "Ez a táblázat tartalmazza a regisztrációs beállításokat."
+#: app/views/registration/index.rhtml:69
+msgid "Registration Information"
+msgstr "Regisztrációs információ"
 
-#: app/views/registration/index.rhtml:29
-msgid "Changed Repositories"
-msgstr "Mondosított telepítési források"
+#: app/views/registration/index.rhtml:70
+msgid "This system is registered"
+msgstr "Regisztrált rendszer"
 
-#: app/views/registration/index.rhtml:44
-msgid "Changed Services"
-msgstr "Módosított szolgáltatások"
+#: app/views/registration/index.rhtml:71
+msgid "System number (GUID)"
+msgstr "Rendszerszám (GUID)"
 
-#: app/views/registration/index.rhtml:57
-#, fuzzy
-#| msgid "Details"
-msgid "Detail"
+#: app/views/registration/index.rhtml:72
+msgid "Register again"
+msgstr "Újbóli regisztráció"
+
+#: app/views/registration/index.rhtml:79
+msgid "Next"
+msgstr "Következő"
+
+#: app/views/registration/index.rhtml:89
+msgid "Mandatory Information"
+msgstr "Szükséges információ"
+
+#: app/views/registration/index.rhtml:104
+msgid "Details"
 msgstr "Részletek"
+
+#: app/views/registration/index.rhtml:128
+msgid "Skip"
+msgstr "Kihagyás"
+
+#: app/views/registration/index.rhtml:129
+msgid "Postpone"
+msgstr "Elhalaszt"
+
+#: app/views/registration/index.rhtml:130
+msgid "or"
+msgstr "vagy"
+
+#~ msgid "Arguments for registration cannot be evaluated."
+#~ msgstr "A regisztrációhoz megadott argumentum nem értékelhető."
