--- a/plugins/registration/po/it/yast_webclient_registration.po
+++ b/plugins/registration/po/it/yast_webclient_registration.po
@@ -1,68 +1,203 @@
+# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
+# This file is distributed under the same license as the package.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: @PACKAGE@\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-11-12 12:07+0100\n"
-"PO-Revision-Date: 2009-11-13 16:04+0100\n"
-"Last-Translator: Andrea Turrini <andrea.turrini@gmail.com>\n"
+"Project-Id-Version: yast_webclient_registration\n"
+"POT-Creation-Date: 2010-04-23 11:01+0200\n"
+"PO-Revision-Date: 2010-05-06 08:56\n"
+"Last-Translator: Novell Language <language@novell.com>\n"
 "Language-Team: Novell Language <language@novell.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-Language: Italian\n"
 
-#: app/controllers/registration_controller.rb:14
-msgid "Invalid session, please login again."
-msgstr "Sessione non valida, per favore effettua nuovamente il login."
+#: app/controllers/registration_controller.rb:32
+msgid "Email"
+msgstr "E-mail"
+
+#: app/controllers/registration_controller.rb:33
+msgid "System name"
+msgstr "Nome del sistema"
+
+#: app/controllers/registration_controller.rb:34
+msgid "SLES registration code"
+msgstr "Codice di registrazione SLES"
+
+#: app/controllers/registration_controller.rb:35
+msgid "SLED registration code"
+msgstr "Codice di registrazione SLED"
+
+#: app/controllers/registration_controller.rb:36
+msgid "Appliance registration code"
+msgstr "Codice di registrazione dell'applicazione"
+
+#: app/controllers/registration_controller.rb:37
+msgid "WebYaST registration code"
+msgstr "Codice di registrazione WebYaST"
+
+#: app/controllers/registration_controller.rb:38
+msgid "Registration code"
+msgstr "Codice di registrazione"
+
+#: app/controllers/registration_controller.rb:39
+msgid "Hostname"
+msgstr "Nome host"
+
+#: app/controllers/registration_controller.rb:40
+msgid "Device name"
+msgstr "Nome dispositivo"
+
+#: app/controllers/registration_controller.rb:41
+msgid "Appliance name"
+msgstr "Nome applicazione"
 
 #: app/controllers/registration_controller.rb:42
-#: app/controllers/registration_controller.rb:75
+msgid "registration code"
+msgstr "codice di registrazione"
+
+#: app/controllers/registration_controller.rb:51
+msgid "Invalid session, please login again."
+msgstr "Sessione non valida, eseguire di nuovo il login."
+
+#: app/controllers/registration_controller.rb:62
 msgid "No permissions for registration"
-msgstr "Nessun permesso per la registrazione"
+msgstr "Nessuna autorizzazione per la registrazione"
 
-#: app/controllers/registration_controller.rb:57
-msgid "Arguments for registration cannot be evaluated."
-msgstr "Gli argomenti per la registrazione non possono essere valutati."
+#: app/controllers/registration_controller.rb:111
+msgid "Please try to register again later."
+msgstr "Provare di nuovo la registrazione in seguito."
 
-#: app/controllers/registration_controller.rb:97
-msgid "Registration finished successfully."
-msgstr "Registrazione terminata con successo."
+#: app/controllers/registration_controller.rb:115
+msgid "Registration was skipped."
+msgstr "La registrazione è stata saltata."
 
-#: app/controllers/registration_controller.rb:123
+#: app/controllers/registration_controller.rb:121
+msgid "Registration did not finish."
+msgstr "Registrazione non completata."
+
+#: app/controllers/registration_controller.rb:122
+msgid "Registration did not succeed."
+msgstr "Registrazione non riuscita."
+
+#: app/controllers/registration_controller.rb:124
+msgid "This may be a temporary issue."
+msgstr "Potrebbe trattarsi di un problema temporaneo."
+
+#: app/controllers/registration_controller.rb:129
+msgid "The registration server returned invalid or incomplete data."
+msgstr "Il server di registrazione ha restituito dati non validi o incompleti."
+
+#: app/controllers/registration_controller.rb:137
+msgid "Could not read the registration configuration."
+msgstr "Impossibile leggere la registrazione della configurazione."
+
+#: app/controllers/registration_controller.rb:137
+msgid "The registration backend is not installed correctly"
+msgstr "Il back-end di registrazione non è installato correttamente"
+
+#: app/controllers/registration_controller.rb:138
+msgid "Please refer to your support contact."
+msgstr "Fare riferimento ai contatti di supporto."
+
+#: app/controllers/registration_controller.rb:167
 msgid "Please fill out missing entries."
-msgstr "Per favore completa gli elementi mancanti."
+msgstr "Compilare le voci mancanti."
 
-#: app/controllers/registration_controller.rb:126
-msgid "Error occured while connecting to registration server."
-msgstr "Si è verificato un errore durante la connessione al server di registrazione."
+#: app/controllers/registration_controller.rb:188
+msgid "Service added:"
+msgstr "Servizio aggiunto:"
 
-#: app/views/registration/index.rhtml:1
+#: app/controllers/registration_controller.rb:192 app/controllers/registration_controller.rb:197
+msgid "Catalog enabled:"
+msgstr "Catalogo abilitato:"
+
+#: app/controllers/registration_controller.rb:221
+msgid "Repository added:"
+msgstr "Archivio aggiunto:"
+
+#: app/controllers/registration_controller.rb:292
+msgid "This system is already registered."
+msgstr "Il sistema è già registrato."
+
+#: app/controllers/registration_controller.rb:321
+msgid "Registration finished successfully."
+msgstr "Registrazione completata."
+
+#: app/controllers/registration_controller.rb:334
+msgid "<p><b>Repositories were not modified during the registration process.</b></p><p>It is likely that an incorrect registration code was used. If this is the case, please attempt the registration process again to get an update repository.</p><p>Please make sure that this system has an update repository configured, otherwise it will not receive updates.</p>"
+msgstr "<p><b>Gli archivi non sono stati modificati nel corso del processo di registrazione.</b></p><p>Sembra che sia stato utilizzato un codice di registrazione errato. In questo caso, eseguire novamente il processo di registrazione per ottenere un archivio aggiornato.</p><p>Assicurarsi che il sistema abbia un archivio aggiornato configurato o non sarà possibile ricevere gli aggiornamenti.</p>"
+
+#: app/controllers/registration_controller.rb:368
+msgid "A connection to the registration server could not be established."
+msgstr "Impossibile stabilire una connessione con il server di registrazione."
+
+#: app/controllers/registration_controller.rb:372
+msgid "The transmitted registration data created a conflict."
+msgstr "I dati di registrazione inviati hanno creato un conflitto."
+
+#: app/controllers/registration_controller.rb:380
+msgid "Registration can not be performed. There is no product installed that can be registered."
+msgstr "Impossibile eseguire la registrazione. Non sono presenti prodotti installati che possono essere registrati."
+
+#: app/controllers/registration_controller.rb:395
+msgid "A connection to the registration server could not be established or it did not reply."
+msgstr "Non è stato possibile stabilire una connessione al server di registrazione o il server non ha risposto."
+
+#: app/controllers/registration_controller.rb:412
+msgid "The registration server returned invalid data."
+msgstr "Il server di registrazione ha restituito dati non validi."
+
+#: app/views/registration/index.rhtml:50 app/views/registration/index.rhtml:51
+msgid "Please enter a valid Email address."
+msgstr "Immettere un indirizzo e-mail valido."
+
+#: app/views/registration/index.rhtml:58
 msgid "register plugin"
-msgstr "plugin di registrazione"
+msgstr "registra plug-in"
 
-#: app/views/registration/index.rhtml:2
+#: app/views/registration/index.rhtml:58
 msgid "Registration"
 msgstr "Registrazione"
 
-#: app/views/registration/index.rhtml:7
-msgid "This table gives registration settings."
-msgstr "Questa tabella mostra le impostazioni di registrazione."
+#: app/views/registration/index.rhtml:66
+msgid "Registration Information"
+msgstr "Informazioni di registrazione"
 
-#: app/views/registration/index.rhtml:29
-msgid "Changed Repositories"
-msgstr "Repository modificati"
+#: app/views/registration/index.rhtml:67
+msgid "This system is registered"
+msgstr "Il sistema è registrato"
 
-#: app/views/registration/index.rhtml:44
-msgid "Changed Services"
-msgstr "Servizi modificati"
+#: app/views/registration/index.rhtml:68
+msgid "System number (GUID)"
+msgstr "Numero di sistema (GUID)"
 
-#: app/views/registration/index.rhtml:57
-#| msgid "Details"
-msgid "Detail"
-msgstr "Dettaglio"
+#: app/views/registration/index.rhtml:69
+msgid "Register again"
+msgstr "Ripeti registrazione"
 
-#~ msgid "Register"
-#~ msgstr "Registra"
+#: app/views/registration/index.rhtml:76
+msgid "Next"
+msgstr "Successivo"
+
+#: app/views/registration/index.rhtml:86
+msgid "Mandatory Information"
+msgstr "Informazioni obbligatorie"
+
+#: app/views/registration/index.rhtml:101
+msgid "Details"
+msgstr "Dettagli"
+
+#: app/views/registration/index.rhtml:126
+msgid "Skip"
+msgstr "Ignora"
+
+#: app/views/registration/index.rhtml:127
+msgid "Postpone"
+msgstr "Postponi"
+
+#: app/views/registration/index.rhtml:128
+msgid "or"
+msgstr "o"
 
