--- a/plugins/registration/po/ja/yast_webclient_registration.po
+++ b/plugins/registration/po/ja/yast_webclient_registration.po
@@ -1,66 +1,203 @@
-# translation of yast_webclient_registration.po to Japanese
-# Yasuhiko Kamata <belphegor@belbel.or.jp>, 2009.
+# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
+# This file is distributed under the same license as the package.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: yast_webclient_registration\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-11-12 12:07+0100\n"
-"PO-Revision-Date: 2009-11-13 20:12+0900\n"
-"Last-Translator: Yasuhiko Kamata <belphegor@belbel.or.jp>\n"
-"Language-Team: Japanese <opensuse-ja@opensuse.org>\n"
+"POT-Creation-Date: 2010-04-23 11:01+0200\n"
+"PO-Revision-Date: 2010-05-07 07:53\n"
+"Last-Translator: Novell Language <language@novell.com>\n"
+"Language-Team: Novell Language <language@novell.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/registration_controller.rb:14
-msgid "Invalid session, please login again."
-msgstr "セッションが正しくありません。ログインし直してください。"
+#: app/controllers/registration_controller.rb:32
+msgid "Email"
+msgstr "電子メール"
+
+#: app/controllers/registration_controller.rb:33
+msgid "System name"
+msgstr "システム名"
+
+#: app/controllers/registration_controller.rb:34
+msgid "SLES registration code"
+msgstr "SLES登録コード"
+
+#: app/controllers/registration_controller.rb:35
+msgid "SLED registration code"
+msgstr "SLED登録コード"
+
+#: app/controllers/registration_controller.rb:36
+msgid "Appliance registration code"
+msgstr "装置登録コード"
+
+#: app/controllers/registration_controller.rb:37
+msgid "WebYaST registration code"
+msgstr "WebYaST登録コード"
+
+#: app/controllers/registration_controller.rb:38
+msgid "Registration code"
+msgstr "登録コード"
+
+#: app/controllers/registration_controller.rb:39
+msgid "Hostname"
+msgstr "ホスト名"
+
+#: app/controllers/registration_controller.rb:40
+msgid "Device name"
+msgstr "デバイス名"
+
+#: app/controllers/registration_controller.rb:41
+msgid "Appliance name"
+msgstr "装置名"
 
 #: app/controllers/registration_controller.rb:42
-#: app/controllers/registration_controller.rb:75
+msgid "registration code"
+msgstr "登録コード"
+
+#: app/controllers/registration_controller.rb:51
+msgid "Invalid session, please login again."
+msgstr "セッションが無効です。再度ログインしてください。"
+
+#: app/controllers/registration_controller.rb:62
 msgid "No permissions for registration"
 msgstr "登録に対する許可がありません"
 
-#: app/controllers/registration_controller.rb:57
-msgid "Arguments for registration cannot be evaluated."
-msgstr "登録理由が処理できません。"
+#: app/controllers/registration_controller.rb:111
+msgid "Please try to register again later."
+msgstr "後で、もう一度登録してみてください。"
 
-#: app/controllers/registration_controller.rb:97
-msgid "Registration finished successfully."
-msgstr "登録処理が成功しました。"
+#: app/controllers/registration_controller.rb:115
+msgid "Registration was skipped."
+msgstr "登録がスキップされました。"
 
-#: app/controllers/registration_controller.rb:123
+#: app/controllers/registration_controller.rb:121
+msgid "Registration did not finish."
+msgstr "登録は終了しませんでした。"
+
+#: app/controllers/registration_controller.rb:122
+msgid "Registration did not succeed."
+msgstr "登録は成功しませんでした。"
+
+#: app/controllers/registration_controller.rb:124
+msgid "This may be a temporary issue."
+msgstr "これは一時的な問題である可能性があります。"
+
+#: app/controllers/registration_controller.rb:129
+msgid "The registration server returned invalid or incomplete data."
+msgstr "登録サーバが無効または不完全なデータを返しました。"
+
+#: app/controllers/registration_controller.rb:137
+msgid "Could not read the registration configuration."
+msgstr "登録環境設定を読み込めませんでした。"
+
+#: app/controllers/registration_controller.rb:137
+msgid "The registration backend is not installed correctly"
+msgstr "登録バックエンドが正しくインストールされていません"
+
+#: app/controllers/registration_controller.rb:138
+msgid "Please refer to your support contact."
+msgstr "サポートの連絡先にお問い合わせください。"
+
+#: app/controllers/registration_controller.rb:167
 msgid "Please fill out missing entries."
-msgstr "失われた項目を入力してください。"
+msgstr "未入力の項目に入力してください。"
 
-#: app/controllers/registration_controller.rb:126
-msgid "Error occured while connecting to registration server."
-msgstr "登録サーバに対して接続する際にエラーが発生しました。"
+#: app/controllers/registration_controller.rb:188
+msgid "Service added:"
+msgstr "追加されたサービス:"
 
-#: app/views/registration/index.rhtml:1
+#: app/controllers/registration_controller.rb:192 app/controllers/registration_controller.rb:197
+msgid "Catalog enabled:"
+msgstr "有効にされたカタログ:"
+
+#: app/controllers/registration_controller.rb:221
+msgid "Repository added:"
+msgstr "追加されたリポジトリ:"
+
+#: app/controllers/registration_controller.rb:292
+msgid "This system is already registered."
+msgstr "このシステムはすでに登録済みです"
+
+#: app/controllers/registration_controller.rb:321
+msgid "Registration finished successfully."
+msgstr "登録が正しく完了しました。"
+
+#: app/controllers/registration_controller.rb:334
+msgid "<p><b>Repositories were not modified during the registration process.</b></p><p>It is likely that an incorrect registration code was used. If this is the case, please attempt the registration process again to get an update repository.</p><p>Please make sure that this system has an update repository configured, otherwise it will not receive updates.</p>"
+msgstr "<p><b>登録処理中にリポジトリが変更されませんでした。</b></p><p>誤った登録コードが使用された可能性があります。その場合は、再度登録処理を試み、リポジトリを更新してください。</p><p>このシステムで更新リポジトリが設定されているかどうか確認してください。そうでない場合、更新は受け入れられません。</p>"
+
+#: app/controllers/registration_controller.rb:368
+msgid "A connection to the registration server could not be established."
+msgstr "登録サ―バへの接続を確立できませんでした。"
+
+#: app/controllers/registration_controller.rb:372
+msgid "The transmitted registration data created a conflict."
+msgstr "転送された登録データにより競合が発生しました。"
+
+#: app/controllers/registration_controller.rb:380
+msgid "Registration can not be performed. There is no product installed that can be registered."
+msgstr "登録が実行できません。登録可能な製品がインストールされていません。"
+
+#: app/controllers/registration_controller.rb:395
+msgid "A connection to the registration server could not be established or it did not reply."
+msgstr "登録サーバへの接続が確立できないか、または登録サーバが返信しませんでした。"
+
+#: app/controllers/registration_controller.rb:412
+msgid "The registration server returned invalid data."
+msgstr "登録サーバは無効なデータを返しました。"
+
+#: app/views/registration/index.rhtml:50 app/views/registration/index.rhtml:51
+msgid "Please enter a valid Email address."
+msgstr "有効なE-メールアドレスを入力してください。"
+
+#: app/views/registration/index.rhtml:58
 msgid "register plugin"
-msgstr "登録プラグイン"
+msgstr "プラグインの登録"
 
-#: app/views/registration/index.rhtml:2
+#: app/views/registration/index.rhtml:58
 msgid "Registration"
 msgstr "登録"
 
-#: app/views/registration/index.rhtml:7
-msgid "This table gives registration settings."
-msgstr "この表には登録に関する設定が示されています。"
+#: app/views/registration/index.rhtml:66
+msgid "Registration Information"
+msgstr "登録情報"
 
-#: app/views/registration/index.rhtml:29
-msgid "Changed Repositories"
-msgstr "変更されたリポジトリ"
+#: app/views/registration/index.rhtml:67
+msgid "This system is registered"
+msgstr "このシステムは登録済みです"
 
-#: app/views/registration/index.rhtml:44
-msgid "Changed Services"
-msgstr "変更されたサービス"
+#: app/views/registration/index.rhtml:68
+msgid "System number (GUID)"
+msgstr "システム番号(GUID)"
 
-#: app/views/registration/index.rhtml:57
-#| msgid "Details"
-msgid "Detail"
-msgstr "詳細"
+#: app/views/registration/index.rhtml:69
+msgid "Register again"
+msgstr "再度登録してください"
+
+#: app/views/registration/index.rhtml:76
+msgid "Next"
+msgstr "次へ"
+
+#: app/views/registration/index.rhtml:86
+msgid "Mandatory Information"
+msgstr "必須情報"
+
+#: app/views/registration/index.rhtml:101
+msgid "Details"
+msgstr "詳細情報"
+
+#: app/views/registration/index.rhtml:126
+msgid "Skip"
+msgstr "スキップ"
+
+#: app/views/registration/index.rhtml:127
+msgid "Postpone"
+msgstr "延期"
+
+#: app/views/registration/index.rhtml:128
+msgid "or"
+msgstr "または"
 
