--- a/plugins/registration/po/ko/yast_webclient_registration.po
+++ b/plugins/registration/po/ko/yast_webclient_registration.po
@@ -1,74 +1,203 @@
+# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
+# This file is distributed under the same license as the package.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: entries\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-11-12 12:07+0100\n"
-"PO-Revision-Date: 2006-06-12 16:56+0100\n"
-"Last-Translator: \n"
-"Language-Team:  <en@li.org>\n"
+"Project-Id-Version: yast_webclient_registration\n"
+"POT-Creation-Date: 2010-04-23 11:01+0200\n"
+"PO-Revision-Date: 2010-05-06 09:30\n"
+"Last-Translator: Novell Language <language@novell.com>\n"
+"Language-Team: Novell Language <language@novell.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/registration_controller.rb:14
-msgid "Invalid session, please login again."
-msgstr ""
+#: app/controllers/registration_controller.rb:32
+msgid "Email"
+msgstr "전자 메일"
+
+#: app/controllers/registration_controller.rb:33
+msgid "System name"
+msgstr "시스템 이름"
+
+#: app/controllers/registration_controller.rb:34
+msgid "SLES registration code"
+msgstr "SLES 등록 코드"
+
+#: app/controllers/registration_controller.rb:35
+msgid "SLED registration code"
+msgstr "SLED 등록 코드"
+
+#: app/controllers/registration_controller.rb:36
+msgid "Appliance registration code"
+msgstr "어플라이언스 등록 코드"
+
+#: app/controllers/registration_controller.rb:37
+msgid "WebYaST registration code"
+msgstr "WebYaST 등록 코드"
+
+#: app/controllers/registration_controller.rb:38
+msgid "Registration code"
+msgstr "등록 코드"
+
+#: app/controllers/registration_controller.rb:39
+msgid "Hostname"
+msgstr "호스트 이름"
+
+#: app/controllers/registration_controller.rb:40
+msgid "Device name"
+msgstr "장치 이름"
+
+#: app/controllers/registration_controller.rb:41
+msgid "Appliance name"
+msgstr "어플라이언스 이름"
 
 #: app/controllers/registration_controller.rb:42
-#: app/controllers/registration_controller.rb:75
+msgid "registration code"
+msgstr "등록 코드"
+
+#: app/controllers/registration_controller.rb:51
+msgid "Invalid session, please login again."
+msgstr "세션이 잘못되었습니다. 다시 로그인하십시오."
+
+#: app/controllers/registration_controller.rb:62
 msgid "No permissions for registration"
-msgstr ""
+msgstr "등록 권한 없음"
 
-#: app/controllers/registration_controller.rb:57
-msgid "Arguments for registration cannot be evaluated."
-msgstr ""
+#: app/controllers/registration_controller.rb:111
+msgid "Please try to register again later."
+msgstr "나중에 다시 등록해 보십시오."
 
-#: app/controllers/registration_controller.rb:97
-msgid "Registration finished successfully."
-msgstr ""
+#: app/controllers/registration_controller.rb:115
+msgid "Registration was skipped."
+msgstr "등록을 건너뛰었습니다."
 
-#: app/controllers/registration_controller.rb:123
+#: app/controllers/registration_controller.rb:121
+msgid "Registration did not finish."
+msgstr "등록이 완료되지 않았습니다."
+
+#: app/controllers/registration_controller.rb:122
+msgid "Registration did not succeed."
+msgstr "등록에 성공하지 못했습니다."
+
+#: app/controllers/registration_controller.rb:124
+msgid "This may be a temporary issue."
+msgstr "이는 일시적인 문제일 수 있습니다."
+
+#: app/controllers/registration_controller.rb:129
+msgid "The registration server returned invalid or incomplete data."
+msgstr "등록 서버가 잘못되었거나 불완전한 데이터를 반환했습니다."
+
+#: app/controllers/registration_controller.rb:137
+msgid "Could not read the registration configuration."
+msgstr "등록 구성을 읽을 수 없습니다."
+
+#: app/controllers/registration_controller.rb:137
+msgid "The registration backend is not installed correctly"
+msgstr "등록 백 엔드가 올바르게 설치되지 않았습니다."
+
+#: app/controllers/registration_controller.rb:138
+msgid "Please refer to your support contact."
+msgstr "지원 연락처를 참조하십시오."
+
+#: app/controllers/registration_controller.rb:167
 msgid "Please fill out missing entries."
-msgstr ""
+msgstr "누락된 항목을 채우십시오."
 
-#: app/controllers/registration_controller.rb:126
-#, fuzzy
-#| msgid "An error occurred while reading from the installation source."
-msgid "Error occured while connecting to registration server."
-msgstr "설치 소스로부터 읽는 도중 오류가 발생했습니다."
+#: app/controllers/registration_controller.rb:188
+msgid "Service added:"
+msgstr "추가된 서비스:"
 
-#: app/views/registration/index.rhtml:1
+#: app/controllers/registration_controller.rb:192 app/controllers/registration_controller.rb:197
+msgid "Catalog enabled:"
+msgstr "활성화된 카탈로그:"
+
+#: app/controllers/registration_controller.rb:221
+msgid "Repository added:"
+msgstr "추가된 리포지토리:"
+
+#: app/controllers/registration_controller.rb:292
+msgid "This system is already registered."
+msgstr "이 시스템은 이미 등록되었습니다."
+
+#: app/controllers/registration_controller.rb:321
+msgid "Registration finished successfully."
+msgstr "등록이 성공적으로 완료되었습니다."
+
+#: app/controllers/registration_controller.rb:334
+msgid "<p><b>Repositories were not modified during the registration process.</b></p><p>It is likely that an incorrect registration code was used. If this is the case, please attempt the registration process again to get an update repository.</p><p>Please make sure that this system has an update repository configured, otherwise it will not receive updates.</p>"
+msgstr "<p><b>등록 프로세스 중에 리포지토리가 수정되지 않았습니다.</b></p><p>잘못된 등록 코드를 사용했을 수 있습니다. 이 경우, 등록 프로세스를 다시 실행하여 업데이트 리포지토리를 가져오십시오.</p><p>이 시스템에 업데이트 리포지토리가 구성되었는지 확인하십시오. 그렇지 않으면 업데이트를 수신하지 않습니다.</p>"
+
+#: app/controllers/registration_controller.rb:368
+msgid "A connection to the registration server could not be established."
+msgstr "등록 서버에 연결할 수 없습니다."
+
+#: app/controllers/registration_controller.rb:372
+msgid "The transmitted registration data created a conflict."
+msgstr "전송된 등록 데이터에 충돌이 발생했습니다."
+
+#: app/controllers/registration_controller.rb:380
+msgid "Registration can not be performed. There is no product installed that can be registered."
+msgstr "등록할 수 없습니다. 등록할 수 있는 제품이 설치되지 않았습니다."
+
+#: app/controllers/registration_controller.rb:395
+msgid "A connection to the registration server could not be established or it did not reply."
+msgstr "등록 서버에 연결할 수 없거나 등록 서버가 응답하지 않습니다."
+
+#: app/controllers/registration_controller.rb:412
+msgid "The registration server returned invalid data."
+msgstr "등록 서버가 잘못된 데이터를 반환했습니다."
+
+#: app/views/registration/index.rhtml:50 app/views/registration/index.rhtml:51
+msgid "Please enter a valid Email address."
+msgstr "올바른 전자 메일 주소를 입력하십시오."
+
+#: app/views/registration/index.rhtml:58
 msgid "register plugin"
-msgstr ""
+msgstr "등록 플러그인"
 
-#: app/views/registration/index.rhtml:2
-#, fuzzy
-#| msgid "Administration"
+#: app/views/registration/index.rhtml:58
 msgid "Registration"
-msgstr "관리"
+msgstr "등록"
 
-#: app/views/registration/index.rhtml:7
-msgid "This table gives registration settings."
-msgstr ""
+#: app/views/registration/index.rhtml:66
+msgid "Registration Information"
+msgstr "등록 정보"
 
-#: app/views/registration/index.rhtml:29
-#, fuzzy
-#| msgid "Error reading repositories:"
-msgid "Changed Repositories"
-msgstr "저장소 읽는 중 오류:"
+#: app/views/registration/index.rhtml:67
+msgid "This system is registered"
+msgstr "이 시스템이 등록됩니다."
 
-#: app/views/registration/index.rhtml:44
-#, fuzzy
-#| msgid "Changed profiles"
-msgid "Changed Services"
-msgstr "변경된 프로파일"
+#: app/views/registration/index.rhtml:68
+msgid "System number (GUID)"
+msgstr "시스템 번호(GUID)"
 
-#: app/views/registration/index.rhtml:57
-#, fuzzy
-#| msgid "Details"
-msgid "Detail"
+#: app/views/registration/index.rhtml:69
+msgid "Register again"
+msgstr "다시 등록"
+
+#: app/views/registration/index.rhtml:76
+msgid "Next"
+msgstr "다음"
+
+#: app/views/registration/index.rhtml:86
+msgid "Mandatory Information"
+msgstr "필수 정보"
+
+#: app/views/registration/index.rhtml:101
+msgid "Details"
 msgstr "자세히"
 
-#~ msgid "Cancel"
-#~ msgstr "취소"
+#: app/views/registration/index.rhtml:126
+msgid "Skip"
+msgstr "건너뛰기"
+
+#: app/views/registration/index.rhtml:127
+msgid "Postpone"
+msgstr "연기"
+
+#: app/views/registration/index.rhtml:128
+msgid "or"
+msgstr "또는"
+
