--- a/plugins/registration/po/zh_TW/yast_webclient_registration.po
+++ b/plugins/registration/po/zh_TW/yast_webclient_registration.po
@@ -1,80 +1,203 @@
-# translation of yast_webclient_registration.po to Chinese Traditional
-# @TITLE@
-# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
+# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
+# This file is distributed under the same license as the package.
 #
-# This file is distributed under the same license as @PACKAGE@ package. FIRST
-#
-# swyear <swyear@gmail.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: yast_webclient_registration\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-11-12 12:07+0100\n"
-"PO-Revision-Date: 2009-10-22 19:36+0800\n"
-"Last-Translator: swyear <swyear@gmail.com>\n"
-"Language-Team: Chinese Traditional <zh@li.org>\n"
+"POT-Creation-Date: 2010-04-23 11:01+0200\n"
+"PO-Revision-Date: 2010-05-06 10:21\n"
+"Last-Translator: Novell Language <language@novell.com>\n"
+"Language-Team: Novell Language <language@novell.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/registration_controller.rb:14
-msgid "Invalid session, please login again."
-msgstr "不適用的工作階段，請重新登入。"
+#: app/controllers/registration_controller.rb:32
+msgid "Email"
+msgstr "電子郵件"
+
+#: app/controllers/registration_controller.rb:33
+msgid "System name"
+msgstr "系統名稱"
+
+#: app/controllers/registration_controller.rb:34
+msgid "SLES registration code"
+msgstr "SLES 註冊代碼"
+
+#: app/controllers/registration_controller.rb:35
+msgid "SLED registration code"
+msgstr "SLED 註冊代碼"
+
+#: app/controllers/registration_controller.rb:36
+msgid "Appliance registration code"
+msgstr "裝置註冊代碼"
+
+#: app/controllers/registration_controller.rb:37
+msgid "WebYaST registration code"
+msgstr "WebYaST 註冊代碼"
+
+#: app/controllers/registration_controller.rb:38
+msgid "Registration code"
+msgstr "註冊代碼"
+
+#: app/controllers/registration_controller.rb:39
+msgid "Hostname"
+msgstr "主機名稱"
+
+#: app/controllers/registration_controller.rb:40
+msgid "Device name"
+msgstr "設備名稱"
+
+#: app/controllers/registration_controller.rb:41
+msgid "Appliance name"
+msgstr "裝置名稱"
 
 #: app/controllers/registration_controller.rb:42
-#: app/controllers/registration_controller.rb:75
+msgid "registration code"
+msgstr "註冊代碼"
+
+#: app/controllers/registration_controller.rb:51
+msgid "Invalid session, please login again."
+msgstr "無效的工作階段，請重新登入。"
+
+#: app/controllers/registration_controller.rb:62
 msgid "No permissions for registration"
-msgstr "沒有註冊的權限"
+msgstr "無註冊許可權"
 
-#: app/controllers/registration_controller.rb:57
-msgid "Arguments for registration cannot be evaluated."
-msgstr ""
+#: app/controllers/registration_controller.rb:111
+msgid "Please try to register again later."
+msgstr "請稍後再重新註冊。"
 
-#: app/controllers/registration_controller.rb:97
-msgid "Registration finished successfully."
-msgstr "註冊順利完成。"
+#: app/controllers/registration_controller.rb:115
+msgid "Registration was skipped."
+msgstr "已跳過註冊。"
 
-#: app/controllers/registration_controller.rb:123
+#: app/controllers/registration_controller.rb:121
+msgid "Registration did not finish."
+msgstr "註冊未完成。"
+
+#: app/controllers/registration_controller.rb:122
+msgid "Registration did not succeed."
+msgstr "註冊未成功。"
+
+#: app/controllers/registration_controller.rb:124
+msgid "This may be a temporary issue."
+msgstr "這可能是暫時性問題。"
+
+#: app/controllers/registration_controller.rb:129
+msgid "The registration server returned invalid or incomplete data."
+msgstr "註冊伺服器傳回無效或不完整的資料。"
+
+#: app/controllers/registration_controller.rb:137
+msgid "Could not read the registration configuration."
+msgstr "無法讀取註冊組態。"
+
+#: app/controllers/registration_controller.rb:137
+msgid "The registration backend is not installed correctly"
+msgstr "未正確安裝註冊後端"
+
+#: app/controllers/registration_controller.rb:138
+msgid "Please refer to your support contact."
+msgstr "請諮詢您的支援聯絡人。"
+
+#: app/controllers/registration_controller.rb:167
 msgid "Please fill out missing entries."
 msgstr "請填寫缺少的項目。"
 
-#: app/controllers/registration_controller.rb:126
-msgid "Error occured while connecting to registration server."
-msgstr "連結到註冊伺服器時發生錯誤。"
+#: app/controllers/registration_controller.rb:188
+msgid "Service added:"
+msgstr "新增的服務︰"
 
-#: app/views/registration/index.rhtml:1
+#: app/controllers/registration_controller.rb:192 app/controllers/registration_controller.rb:197
+msgid "Catalog enabled:"
+msgstr "啟用的目錄︰"
+
+#: app/controllers/registration_controller.rb:221
+msgid "Repository added:"
+msgstr "新增的儲存庫："
+
+#: app/controllers/registration_controller.rb:292
+msgid "This system is already registered."
+msgstr "此系統已註冊。"
+
+#: app/controllers/registration_controller.rb:321
+msgid "Registration finished successfully."
+msgstr "成功完成註冊。"
+
+#: app/controllers/registration_controller.rb:334
+msgid "<p><b>Repositories were not modified during the registration process.</b></p><p>It is likely that an incorrect registration code was used. If this is the case, please attempt the registration process again to get an update repository.</p><p>Please make sure that this system has an update repository configured, otherwise it will not receive updates.</p>"
+msgstr "<p><b>註冊過程中，系統未修改儲存庫。</b></p><p>可能是因為使用了不正確的註冊代碼。若是如此，請嘗試重新註冊，獲取更新儲存庫。</p><p>請確定此系統已經設定了更新儲存庫，否則將無法接收更新。</p>"
+
+#: app/controllers/registration_controller.rb:368
+msgid "A connection to the registration server could not be established."
+msgstr "無法建立註冊伺服器連線。"
+
+#: app/controllers/registration_controller.rb:372
+msgid "The transmitted registration data created a conflict."
+msgstr "傳輸的註冊資料產生衝突。"
+
+#: app/controllers/registration_controller.rb:380
+msgid "Registration can not be performed. There is no product installed that can be registered."
+msgstr "無法執行註冊。系統中未安裝可以註冊的產品。"
+
+#: app/controllers/registration_controller.rb:395
+msgid "A connection to the registration server could not be established or it did not reply."
+msgstr "無法建立註冊伺服器連線或連線未回應。"
+
+#: app/controllers/registration_controller.rb:412
+msgid "The registration server returned invalid data."
+msgstr "註冊伺服器傳回無效的資料。"
+
+#: app/views/registration/index.rhtml:50 app/views/registration/index.rhtml:51
+msgid "Please enter a valid Email address."
+msgstr "請輸入有效的電子郵件地址。"
+
+#: app/views/registration/index.rhtml:58
 msgid "register plugin"
-msgstr "註冊插件"
+msgstr "註冊外掛程式"
 
-#: app/views/registration/index.rhtml:2
+#: app/views/registration/index.rhtml:58
 msgid "Registration"
 msgstr "註冊"
 
-#: app/views/registration/index.rhtml:7
-msgid "This table gives registration settings."
-msgstr "此表格給定註冊設定。"
+#: app/views/registration/index.rhtml:66
+msgid "Registration Information"
+msgstr "註冊資訊"
 
-#: app/views/registration/index.rhtml:29
-msgid "Changed Repositories"
-msgstr "變更的套件庫"
+#: app/views/registration/index.rhtml:67
+msgid "This system is registered"
+msgstr "此系統已註冊"
 
-#: app/views/registration/index.rhtml:44
-#, fuzzy
-#| msgid "Changed profiles"
-msgid "Changed Services"
-msgstr "已變更的設定檔"
+#: app/views/registration/index.rhtml:68
+msgid "System number (GUID)"
+msgstr "系統編號 (GUID)"
 
-#: app/views/registration/index.rhtml:57
-#, fuzzy
-#| msgid "Details"
-msgid "Detail"
+#: app/views/registration/index.rhtml:69
+msgid "Register again"
+msgstr "重新註冊"
+
+#: app/views/registration/index.rhtml:76
+msgid "Next"
+msgstr "下一步"
+
+#: app/views/registration/index.rhtml:86
+msgid "Mandatory Information"
+msgstr "必要資訊"
+
+#: app/views/registration/index.rhtml:101
+msgid "Details"
 msgstr "詳細資料"
 
-#~ msgid "Register"
-#~ msgstr "註冊"
+#: app/views/registration/index.rhtml:126
+msgid "Skip"
+msgstr "跳過"
 
-# cancel button label
-#~ msgid "Cancel"
-#~ msgstr "取消"
+#: app/views/registration/index.rhtml:127
+msgid "Postpone"
+msgstr "延期"
+
+#: app/views/registration/index.rhtml:128
+msgid "or"
+msgstr "或"
+
